--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.15.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "0.263.1",
     "next": "^13.4.13",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
