--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "sharp": "^0.31.3",
     "swiper": "^10.1.0",
     "tailwind-merge": "^1.14.0",
