--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.15.1",
     "lucide-react": "0.263.1",
     "next": "^13.4.13",
+    "next-redux-wrapper": "^8.1.0",
     "next-sanity": "^5.4.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "sanity": "^3.15.1",
     "sharp": "^0.31.3",
     "swiper": "^10.1.0",
