--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.27",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.3",
