--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-redux-wrapper": "^8.1.0",
     "next-sanity": "^5.4.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/node": "^17.0.45",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/parser": "^6.3.0",
