--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.2",
