--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "framer-motion": "^10.15.1",
+    "graphql-tag": "^2.12.6",
     "lucide-react": "0.263.1",
     "next": "^13.4.13",
     "next-redux-wrapper": "^8.1.0",
@@ -38,6 +39,7 @@
     "redux": "^4.2.1",
     "sanity": "^3.15.1",
     "sharp": "^0.31.3",
+    "shopify-buy": "^2.20.1",
     "swiper": "^10.1.0",
     "tailwind-merge": "^1.14.0",
     "zustand": "^4.4.1"
@@ -48,6 +50,7 @@
     "@types/nodemailer": "^6.4.9",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/shopify-buy": "^2.17.1",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.47.0",
