--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -21,8 +23,10 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
+    "axios": "^1.5.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.15.1",
     "graphql-tag": "^2.12.6",
     "lucide-react": "0.263.1",
