--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^17.0.45",
     "@types/nodemailer": "^6.4.9",
     "@types/react": "^18.2.20",
