--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "0.263.1",
     "next": "^13.4.13",
+    "next-fonts": "^1.5.1",
     "next-redux-wrapper": "^8.1.0",
     "next-sanity": "^5.4.0",
     "next-themes": "^0.2.1",
