--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.4",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
     "@headlessui/react": "^1.7.17",
@@ -28,6 +29,7 @@
     "clsx": "^1.2.1",
     "fortawesome": "^0.0.1-security",
     "framer-motion": "^10.15.1",
+    "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
     "lucide-react": "0.263.1",
@@ -41,6 +43,8 @@
     "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-range": "^1.8.14",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "sanity": "^3.15.1",
