--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.16.7",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -36,9 +37,10 @@
     "next": "^13.4.13",
     "next-fonts": "^1.5.1",
     "next-redux-wrapper": "^8.1.0",
-    "next-sanity": "^5.4.0",
+    "next-sanity": "^5.5.4",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.4",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-calendly": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -47,11 +49,13 @@
     "react-range": "^1.8.14",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "sanity": "^3.15.1",
+    "sanity": "^3.16.7",
     "sharp": "^0.31.3",
     "shopify-buy": "^2.20.1",
+    "styled-components": "5.2",
     "swiper": "^10.1.0",
     "tailwind-merge": "^1.14.0",
+    "theme-ui": "^0.16.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
