--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "0.263.1",
     "next": "^13.4.13",
+    "next-cloudinary": "^4.23.1",
     "next-fonts": "^1.5.1",
     "next-redux-wrapper": "^8.1.0",
     "next-sanity": "^5.5.4",
